--- a/.github/workflows/simple-ci.yml
+++ b/.github/workflows/simple-ci.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+    types: [opened, reopened, ready_for_review, synchronize]
     branches: [ "main" ]
+  issue_comment:
+    types: [created]
   workflow_dispatch:
 
 jobs:
@@ -36,3 +39,4 @@ jobs:
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
