--- a/.github/workflows/simple-ci.yml
+++ b/.github/workflows/simple-ci.yml
@@ -11,29 +11,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
   pr_agent_job:
+    if: ${{ github.event.sender.type != 'Bot' }}
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
       contents: write
+    name: Run PR agent on PRs and respond to comments
     steps:
-      - name: Print event info (debugging)
-        run: echo "Event sender type is ${{ github.event.sender.type }}"
-
       - name: PR Agent action step
         id: pragent
         uses: qodo-ai/pr-agent@main
